--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
         <footer class="bg-dark p-2 my-2 text-center">
             <div class="container">
                 <p class="text-white">All Right Reserved @<span class="text-info">Build</span>Con</p>
+                <p class="text-white">Created by melch</p>
             </div>
         </footer>
     <!-- End of Footer -->
